Fixed a scan line bug that was causing primitives to bleed into each other. Updated the include paths for the main project to make it more flexible.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <ClInclude Include="AssetLoader.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="GlobalEdgeTable.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IntelIntrinsics.h" />
