--- a/SoftwareRenderer/CMakeLists.txt
+++ b/SoftwareRenderer/CMakeLists.txt
@@ -13,6 +13,10 @@ target_link_libraries(SoftwareRenderer PUBLIC ZSharp)
 
 set(SoftwareRenderer_Compile_Options 
 	/W4
+	/WX
+	/sdl-
+	/GR-
+	/GS-
 	/arch:AVX512
 	/std:c++17
 	/MP
