Refactored scanner code to allow for easier addition of other file formats (.ini up next). Added std::filesystem to file stuff. Cleaned a lot of stuff up in general.

--- a/SoftwareRenderer/CMakeLists.txt
+++ b/SoftwareRenderer/CMakeLists.txt
@@ -25,3 +25,15 @@ set(SoftwareRenderer_Compile_Options
 target_compile_options(SoftwareRenderer PRIVATE 
 	${SoftwareRenderer_Compile_Options}
 )
+
+set(RUNTIME_ASSETS)
+get_property(RUNTIME_ASSETS
+	TARGET ZSharp
+	PROPERTY ZSHARP_ASSETS
+)
+
+add_custom_command(TARGET SoftwareRenderer
+	POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy ${RUNTIME_ASSETS} ${SoftwareRendererV3_BINARY_DIR}
+	COMMENT "Copying assets to build directory."
+)
