Removed unnecessary copy constructor guards. Fixed a bug in the input manager, will need to improve it later. Removed AVX512 requirement so I can work on my laptop.

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,9 @@ __pycache__/
 
 # VS CMake Files
 CMakeSettings.json
+CMakeCache.txt
+CMakeFiles/
+*.vcxproj
+*.vcxproj.filters
+cmake_install.cmake
+*.sln
