--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Bb]uild
+MinSizeRel/
+RelWithDebInfo/
+SoftwareRenderer.dir/
 
 # Visual Studio 2015 cache/options directory
 .vs/
