Added separate debug/release options once again, this time without causing build issues. Sync to latest ZSharp commit.

--- a/SoftwareRenderer/CMakeLists.txt
+++ b/SoftwareRenderer/CMakeLists.txt
@@ -12,7 +12,7 @@ target_sources(SoftwareRenderer
 target_include_directories(SoftwareRenderer SYSTEM PUBLIC ${CMAKE_SOURCE_DIR}/ZSharp/)
 target_link_libraries(SoftwareRenderer PUBLIC ZSharp)
 
-set(SoftwareRenderer_Compile_Options 
+set(SoftwareRenderer_Compile_Options_Debug 
 	/source-charset:utf-8
 	/std:c17
 	/std:c++latest
@@ -24,10 +24,32 @@ set(SoftwareRenderer_Compile_Options
 	/WX
 )
 
-set(SoftwareRenderer_Link_Options 
+set(SoftwareRenderer_Compile_Options_Release 
+	/source-charset:utf-8
+	/std:c17
+	/std:c++latest
+	/D_UNICODE
+	/GR-
+	/MP
+	/U_MBCS
+	/W4
+	/WX
+	/sdl-
+	/GL
+	/GS-
+)
+
+set(SoftwareRenderer_Link_Options_Debug 
   /INCREMENTAL:NO
   /LTCG:NOSTATUS
   /WX
+)
+
+set(SoftwareRenderer_Link_Options_Release 
+  /INCREMENTAL:NO
+  /LTCG:NOSTATUS
+  /WX
+  /LTCG
 )
 
 target_compile_definitions(SoftwareRenderer PRIVATE 
@@ -36,7 +58,17 @@ target_compile_definitions(SoftwareRenderer PRIVATE
 )
 
 target_compile_options(SoftwareRenderer PRIVATE 
-	${SoftwareRenderer_Compile_Options}
+	"$<$<CONFIG:DEBUG>:${SoftwareRenderer_Compile_Options_Debug}>"
 )
 
-target_link_options(SoftwareRenderer PUBLIC ${SoftwareRenderer_Link_Options})
+target_compile_options(SoftwareRenderer PRIVATE 
+	"$<$<CONFIG:RELEASE>:${SoftwareRenderer_Compile_Options_Release}>"
+)
+
+target_link_options(SoftwareRenderer PUBLIC 
+	"$<$<CONFIG:DEBUG>:${SoftwareRenderer_Link_Options_Debug}>"
+)
+
+target_link_options(SoftwareRenderer PUBLIC 
+	"$<$<CONFIG:RELEASE>:${SoftwareRenderer_Link_Options_Release}>"
+)
