Add support for Intel ICX compiler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 cmake_minimum_required(VERSION 3.23)
 
+set(CMAKE_CONFIGURATION_TYPES
+	Debug
+	RelWithDebInfo
+	MinSizeRel
+	Release
+	Release_PGO_Collect
+	Release_PGO_Optimize
+	CACHE STRING "" FORCE
+)
+
 project(SoftwareRendererV3 VERSION 1.0)
 
 add_subdirectory(ZSharp)
